--- a/package.json
+++ b/package.json
@@ -11,15 +11,20 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.17",
+    "blurhash": "^2.0.5",
     "daisyui": "^2.51.6",
     "firebase": "^9.21.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
+    "react-blurhash": "^0.3.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-lazy-load": "^4.0.1",
+    "react-lazy-load-image-component": "^1.5.6",
     "react-router-dom": "^6.11.0",
     "react-spinners": "^0.13.8",
+    "react-to-pdf": "^0.0.14",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
